# capixx-vsomeip-Get-Started

./: CMakeLists.txt  README.md  client-config.json  commonapi.ini  hello.fdepl  hello.fidl  init_client.sh  init_service.sh  service-config.json
client/: CMakeLists.txt  client.cpp
service/: CMakeLists.txt  service.cpp
src-gen/v0/GettingStarted/: HelloWorld.hpp  HelloWorldProxy.hpp  HelloWorldProxyBase.hpp  HelloWorldSomeIPCatalog.json  HelloWorldSomeIPDeployment.cpp  HelloWorldSomeIPDeployment.hpp  HelloWorldSomeIPProxy.cpp  HelloWorldSomeIPProxy.hpp  HelloWorldSomeIPStubAdapter.cpp  HelloWorldSomeIPStubAdapter.hpp  HelloWorldStub.hpp  HelloWorldStubDefault.hpp
